name:                schuif
version:             0.1.0.0
synopsis:            Terminal-based pandoc presentation tool
description:         Terminal-based pandoc presentation tool
license:             GPL-2
license-file:        LICENSE
author:              Jasper Van der Jeugt <m@jaspervdj.be>
maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
copyright:           2016 Jasper Van der Jeugt
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable schuif
  main-is:             Main.hs
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:
    ansi-wl-pprint >= 0.6  && < 0.7,
    ansi-terminal  >= 0.6  && < 0.7,
    base           >= 4.9  && < 4.10,
    pandoc         >= 1.17 && < 1.18,
    terminal-size  >= 0.3  && < 0.4
  -- other-modules:       
