Name:                schuif
Version:             0.1.0.0
Synopsis:            Terminal-based pandoc presentation tool
Description:         Terminal-based pandoc presentation tool
License:             GPL-2
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
Copyright:           2016 Jasper Van der Jeugt
Category:            Text
Build-type:          Simple
Extra-source-files:  CHANGELOG.md
Cabal-version:       >=1.10

Executable schuif
  Main-is:           Main.hs
  Ghc-options:       -Wall
  Hs-source-dirs:    src
  Default-language:  Haskell2010

  Build-depends:
    ansi-wl-pprint >= 0.6  && < 0.7,
    ansi-terminal  >= 0.6  && < 0.7,
    base           >= 4.9  && < 4.10,
    pandoc         >= 1.17 && < 1.18,
    terminal-size  >= 0.3  && < 0.4
  -- other-modules:       
